--- a/src/app/feature/user/user.component.scss
+++ b/src/app/feature/user/user.component.scss
@@ -100,6 +100,7 @@
           height: 70px;
           font-size: 15px;
           font-weight: 700;
+          cursor: pointer;
           span {
             font-size: 10px;
             font-weight: 300;
