--- a/src/app/feature/user/user.component.scss
+++ b/src/app/feature/user/user.component.scss
@@ -1,5 +1,9 @@
 @import url('http://fonts.cdnfonts.com/css/open-sans');
 
+// border color rgb(199, 22, 111)
+// color bg rgb(255, 233, 244);
+
+
 .container {
   width: 100vw;
   height: 100vh;
@@ -18,7 +22,6 @@
     bottom: 0px;
     width: 100%;
     height: 140px;
-    background-color: #00000041;
     background-color: rgb(0 0 0 / 35%);
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
@@ -29,7 +32,7 @@
         padding: 12px;
         border: none;
         border-radius: 40px;
-        background-color: #00d31d;
+        background-color: rgb(48, 232, 73);
         width: 50%;
         margin-left: auto;
         margin-right: auto;
@@ -55,8 +58,8 @@
         height: 50px;
         width: 50px;
         border-top-right-radius: 100%;
-        border-top: 3px solid #00d31d;
-        border-right: 3px solid #00d31d;
+        border-top: 3px solid rgb(48, 232, 73);
+        border-right: 3px solid rgb(48, 232, 73);
         &:hover {
           opacity: 0.6;
         }
@@ -68,8 +71,8 @@
         height: 50px;
         width: 50px;
         border-top-left-radius: 100%;
-        border-top: 3px solid #00d31d;
-        border-left: 3px solid #00d31d;
+        border-top: 3px solid rgb(48, 232, 73);
+        border-left: 3px solid rgb(48, 232, 73);
         &:hover {
           opacity: 0.6;
         }
@@ -96,7 +99,7 @@
         animation-iteration-count: infinite;
         z-index: 2;
         button {
-          background-color: rgb(199, 22, 111);
+          background-color: #c71670;
           color: #fff;
           border: none;
           border-radius: 50%;
@@ -124,7 +127,7 @@
       }
       .footer-nav-line {
         position: absolute;
-        background-color: rgb(199, 22, 111);
+        background-color: #c71670;
         width: 3.5px;
         height: 40px;
         bottom: 46px;
@@ -134,4 +137,15 @@
       }
     }
   }
+}
+
+
+.content-popup {
+  border: 1px solid rgb(199, 22, 111);
+  min-height: 50vh;
+  border-top-left-radius: 99px;
+  border-bottom-right-radius: 99px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 30px;
 }
