--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,34 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-style: 16px;
+}
+
 html, body {
   margin: 0px;
   height: 0px;
   width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, 0.55);
+}
+
+.modal-dialog-centered {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.55);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  animation-name: scron;
+  animation-duration: 2.5s;
+}
+
+@keyframes scron {
+  0%   {height: 20vh;}
+  100% {height: 100vh;}
 }
