--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,9 @@ html, body {
   top: 0;
   left: 0;
   z-index: 3;
+}
+
+.animation-show {
   animation-name: scron;
   animation-duration: 2.5s;
 }
@@ -31,4 +34,14 @@ html, body {
 @keyframes scron {
   0%   {height: 20vh;}
   100% {height: 100vh;}
+}
+
+.animation-disappear {
+  animation-name: disappear;
+  animation-duration: 2.5s;
+}
+
+@keyframes disappear {
+  0%   {height: 100vh;}
+  100% {height: 0vh;}
 }
