--- a/src/app/feature/user/user.component.scss
+++ b/src/app/feature/user/user.component.scss
@@ -1,5 +1,5 @@
-@import url('http://fonts.cdnfonts.com/css/open-sans');
 $bg-color-pink: rgb(199, 22, 111);
+$bg-pink-white: rgb(255, 233, 244);
 
 // border color rgb(199, 22, 111)
 // color bg rgb(255, 233, 244);
@@ -18,6 +18,10 @@ $bg-color-pink: rgb(199, 22, 111);
   overflow: hidden;
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
+  .container-logo {
+    text-align: center;
+    margin-top: 20%;
+  }
   .footer {
     position: absolute;
     bottom: 0px;
@@ -148,7 +152,7 @@ $bg-color-pink: rgb(199, 22, 111);
 }
 
 .content-popup {
-  background-color: rgb(255, 233, 244);
+  background-color: $bg-pink-white;
   border: 1px solid $bg-color-pink;
   border-top-left-radius: 99px;
   border-bottom-right-radius: 99px;
@@ -304,6 +308,27 @@ $bg-color-pink: rgb(199, 22, 111);
       width: calc(100vw - 20px);
     }
   }
+}
+
+.list-room {
+  position: relative;
+  padding: 10px;
+  overflow-y: auto;
+  div.list-room-panel {
+    width: 100%;
+    height: calc(95vh / 4);
+    display: inline-block;
+    position: relative;
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+    }
+  }
+}
+
+@media screen and (max-width: 321px){
+  
 }
 
 @media screen and (max-width: 576px){
