--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,14 @@
+@import url('http://fonts.cdnfonts.com/css/open-sans');
+$bg-color-pink: rgb(199, 22, 111);
+$bg-pink-white: rgb(255, 233, 244);
+$bg-black: rgba(0, 0, 0, 0.55);
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-style: 16px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 html, body {
@@ -10,7 +16,7 @@ html, body {
   height: 0px;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.55);
+  background-color: $bg-black;
 }
 
 .modal-dialog-centered {
@@ -19,7 +25,7 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.55);
+  background-color: $bg-black;
   position: absolute;
   top: 0;
   left: 0;
@@ -28,20 +34,21 @@ html, body {
 
 .animation-show {
   animation-name: scron;
-  animation-duration: 2.5s;
+  animation-duration: 1s;
 }
 
 @keyframes scron {
-  0%   {height: 20vh;}
+  0%   {height: 30vh;}
   100% {height: 100vh;}
 }
 
 .animation-disappear {
   animation-name: disappear;
-  animation-duration: 2.5s;
+  animation-duration: 1s;
+  opacity: 1;
 }
 
 @keyframes disappear {
   0%   {height: 100vh;}
-  100% {height: 0vh;}
+  100% {height: 0vh; opacity: 0}
 }
